--- a/mcimbi-rsvp/src/container/Home.css
+++ b/mcimbi-rsvp/src/container/Home.css
@@ -34,7 +34,11 @@
 }
 
 .grid-3 {
-    flex: 1;
+    flex: 2;
     order: 3;
     margin-left: 10rem;
+}
+
+.Button {
+    align-content: center;
 }
